# analytics_service

./: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  kowl-config.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: config.py  containers.py  db_config.py  main.py
src/app/application/services/: kafka_consumer.py
src/app/core/dto/: task.py
src/app/core/interfaces/consumer/: consumer.py
src/app/core/interfaces/repositories/: analytics_repo.py  message.py  mongo_repo.py
src/app/core/interfaces/services/: consumer.py  kafka_consumer.py  message_handler.py  message_process.py  project.py  task.py  user.py
src/app/core/schemas/: topics.py
src/app/core/services/: consumer.py
src/app/infrastructure/api/rest/: controllers.py
src/app/infrastructure/api/rest/v1/: project_analytics.py
src/app/infrastructure/repositories/: analytics_repo.py  message.py  mongo_repo.py
src/app/infrastructure/services/: kafka_consumer.py  message_handler.py  message_process.py  project.py  task.py  user.py
src/app/presentation/interfaces/services/: kafka_consumer.py
src/tests/: conftest.py
src/tests/e2e/: conftest.py
src/tests/e2e/rest/v1/project_analytics/: count_average_time_test.py  count_completed_tasks_test.py  count_projects_test.py  count_tasks_test.py  count_users_test.py  get_statuses_test.py
