[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pre-commit = "^4.1.0"
black = "^25.1.0"
ruff = "^0.9.9"
isort = "^6.0.1"
aiokafka = "^0.12.0"
dotenv = "^0.9.9"
pydantic-settings = "^2.8.1"
motor = "^3.7.0"
dependency-injector = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
